[gd_scene load_steps=12 format=3 uid="uid://1u1akkgbkpi8"]

[ext_resource type="FontFile" uid="uid://78i8i7i2md5e" path="res://fonts/droid-sans/DroidSans.ttf" id="1"]
[ext_resource type="Script" path="res://scripts/ScoreScreen.gd" id="2"]
[ext_resource type="FontFile" uid="uid://di5xep1kns22p" path="res://fonts/droid-sans/DroidSans-Bold.ttf" id="3"]
[ext_resource type="Texture2D" uid="uid://cjy6kbftlog6l" path="res://graphics/ZNAKI/PZ1.jpg" id="4"]
[ext_resource type="Theme" uid="uid://bfooh2sk4dse4" path="res://Main.theme" id="5"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="6"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="ScoreScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("5")
script = ExtResource("2")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -350.0
offset_right = 600.0
offset_bottom = 350.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Questions" type="VBoxContainer" parent="Margin/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Margin/HBoxContainer/VBoxContainer/Questions"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("1")
text = "Pytanie nr ..."

[node name="Label2" type="Label" parent="Margin/HBoxContainer/VBoxContainer/Questions"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("2")
text = ".................................................................................."
clip_text = true

[node name="TextureRect" type="TextureRect" parent="Margin/HBoxContainer/VBoxContainer/Questions"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4")
expand_mode = 1
stretch_mode = 6

[node name="Timer" type="Timer" parent="Margin/HBoxContainer/VBoxContainer/Questions"]

[node name="Answers" type="GridContainer" parent="Margin/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 10

[node name="Label" type="Label" parent="Margin/HBoxContainer/VBoxContainer/Answers"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("3")
text = "ODPOWIEDZIAŁEŚ POPRAWNIE/NIEPOPRAWNIE"

[node name="HBoxContainer2" type="HBoxContainer" parent="Margin/HBoxContainer/VBoxContainer/Answers"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="Label2" type="Label" parent="Margin/HBoxContainer/VBoxContainer/Answers/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("3")
text = "TWOJA ODPOWIEDŹ: ..."

[node name="Label3" type="Label" parent="Margin/HBoxContainer/VBoxContainer/Answers/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("3")
text = "POPRAWNA ODPOWIEDŹ: ..."

[node name="AnswerButton" type="ColorRect" parent="Margin/HBoxContainer/VBoxContainer/Answers"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("5")
color = Color(0.313726, 0.313726, 0.313726, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/HBoxContainer/VBoxContainer/Answers/AnswerButton"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_right = -50.0
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="Margin/HBoxContainer/VBoxContainer/Answers/AnswerButton/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_fonts/font = SubResource("4")
text = "A)"

[node name="Label2" type="Label" parent="Margin/HBoxContainer/VBoxContainer/Answers/AnswerButton/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
theme_override_fonts/font = SubResource("5")
text = "................................................."
clip_text = true

[node name="AnswerButton2" type="ColorRect" parent="Margin/HBoxContainer/VBoxContainer/Answers"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("5")
color = Color(0.313726, 0.313726, 0.313726, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/HBoxContainer/VBoxContainer/Answers/AnswerButton2"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_right = -50.0
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="Margin/HBoxContainer/VBoxContainer/Answers/AnswerButton2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_fonts/font = SubResource("4")
text = "B)"

[node name="Label2" type="Label" parent="Margin/HBoxContainer/VBoxContainer/Answers/AnswerButton2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
theme_override_fonts/font = SubResource("5")
text = "................................................."
clip_text = true

[node name="AnswerButton3" type="ColorRect" parent="Margin/HBoxContainer/VBoxContainer/Answers"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("5")
color = Color(0.313726, 0.313726, 0.313726, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/HBoxContainer/VBoxContainer/Answers/AnswerButton3"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_right = -50.0
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="Margin/HBoxContainer/VBoxContainer/Answers/AnswerButton3/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 7
theme_override_fonts/font = SubResource("4")
text = "C)"

[node name="Label2" type="Label" parent="Margin/HBoxContainer/VBoxContainer/Answers/AnswerButton3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
theme_override_fonts/font = SubResource("5")
text = "................................................."
clip_text = true

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/HBoxContainer/VBoxContainer/Answers"]
layout_mode = 2

[node name="PrevButton" type="Button" parent="Margin/HBoxContainer/VBoxContainer/Answers/HBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 5

[node name="Label" type="Label" parent="Margin/HBoxContainer/VBoxContainer/Answers/HBoxContainer/PrevButton"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.75684
offset_right = 4.75684
theme_override_fonts/font = SubResource("6")
text = "POPRZEDNIE"

[node name="QuitButton" type="Button" parent="Margin/HBoxContainer/VBoxContainer/Answers/HBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 5

[node name="Label" type="Label" parent="Margin/HBoxContainer/VBoxContainer/Answers/HBoxContainer/QuitButton"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.75684
offset_right = 4.75684
theme_override_fonts/font = SubResource("6")
text = "WYJDŹ"

[node name="NextButton" type="Button" parent="Margin/HBoxContainer/VBoxContainer/Answers/HBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 5

[node name="Label" type="Label" parent="Margin/HBoxContainer/VBoxContainer/Answers/HBoxContainer/NextButton"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.75684
offset_right = 4.75684
theme_override_fonts/font = SubResource("6")
text = "NASTĘPNE"

[connection signal="pressed" from="Margin/HBoxContainer/VBoxContainer/Answers/HBoxContainer/PrevButton" to="." method="_on_PrevButton_pressed"]
[connection signal="pressed" from="Margin/HBoxContainer/VBoxContainer/Answers/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Margin/HBoxContainer/VBoxContainer/Answers/HBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
